Parmenides/TBox/language/parmenides_tboxParser.py
# Generated from Parmenides/TBox/parmenides_tbox.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class parmenides_tboxParser ( Parser ):

    grammarFileName = "parmenides_tbox.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'UPDATE'", "'where'", "'and'", 
                     "'over'", "'replace'", "'INVENT'", "'from'", "'as'", 
                     "'('", "')'", "'?'", "'{'", "'}'", "','", "'AND'", 
                     "'OR'", "'NOT'", "'with'", "'<'", "'>'", "'withparents'", 
                     "':'", "'attr'", "'withval'", "'asname'", "'/'", "'rem'", 
                     "'add'", "'to'", "'with-properties'", "'isa'", "'all'", 
                     "'['", "']'", "'->'", "'.'", "<INVALID>", "'none'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "NULL", "INTEGER", 
                      "NUMBER", "SPACE", "COMMENT", "LINE_COMMENT", "DecimalFloatingConstant", 
                      "FractionalConstant", "ExponentPart", "DIGIT" ]

    RULE_parmenides_tbox = 0
    RULE_rule = 1
    RULE_formula = 2
    RULE_sentence_match = 3
    RULE_field_match = 4
    RULE_data_match_path = 5
    RULE_operations = 6
    RULE_ontology_query = 7
    RULE_replacement_pair = 8
    RULE_key_values = 9
    RULE_opt_string = 10

    ruleNames =  [ "parmenides_tbox", "rule", "formula", "sentence_match", 
                   "field_match", "data_match_path", "operations", "ontology_query", 
                   "replacement_pair", "key_values", "opt_string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    STRING=38
    NULL=39
    INTEGER=40
    NUMBER=41
    SPACE=42
    COMMENT=43
    LINE_COMMENT=44
    DecimalFloatingConstant=45
    FractionalConstant=46
    ExponentPart=47
    DIGIT=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Parmenides_tboxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.RuleContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.RuleContext,i)


        def getRuleIndex(self):
            return parmenides_tboxParser.RULE_parmenides_tbox

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParmenides_tbox" ):
                listener.enterParmenides_tbox(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParmenides_tbox" ):
                listener.exitParmenides_tbox(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParmenides_tbox" ):
                return visitor.visitParmenides_tbox(self)
            else:
                return visitor.visitChildren(self)




    def parmenides_tbox(self):

        localctx = parmenides_tboxParser.Parmenides_tboxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parmenides_tbox)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.rule_()
                self.state = 23
                self.match(parmenides_tboxParser.T__0)
                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==7):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return parmenides_tboxParser.RULE_rule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SubstitutionsContext(RuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.RuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,0)

        def sentence_match(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Sentence_matchContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Sentence_matchContext,i)

        def ontology_query(self):
            return self.getTypedRuleContext(parmenides_tboxParser.Ontology_queryContext,0)

        def operations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.OperationsContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.OperationsContext,i)

        def replacement_pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Replacement_pairContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Replacement_pairContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubstitutions" ):
                listener.enterSubstitutions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubstitutions" ):
                listener.exitSubstitutions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubstitutions" ):
                return visitor.visitSubstitutions(self)
            else:
                return visitor.visitChildren(self)


    class InventionContext(RuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.RuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.FormulaContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,i)

        def sentence_match(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Sentence_matchContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Sentence_matchContext,i)

        def ontology_query(self):
            return self.getTypedRuleContext(parmenides_tboxParser.Ontology_queryContext,0)

        def operations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.OperationsContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.OperationsContext,i)

        def replacement_pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Replacement_pairContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Replacement_pairContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvention" ):
                listener.enterInvention(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvention" ):
                listener.exitInvention(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvention" ):
                return visitor.visitInvention(self)
            else:
                return visitor.visitChildren(self)



    def rule_(self):

        localctx = parmenides_tboxParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = parmenides_tboxParser.SubstitutionsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.match(parmenides_tboxParser.T__1)
                self.state = 30
                self.formula()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 31
                    self.match(parmenides_tboxParser.T__2)
                    self.state = 37
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 32
                            self.sentence_match()
                            self.state = 33
                            self.match(parmenides_tboxParser.T__3) 
                        self.state = 39
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                    self.state = 40
                    self.sentence_match()


                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 43
                    self.match(parmenides_tboxParser.T__4)
                    self.state = 44
                    self.ontology_query()


                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 47
                    self.match(parmenides_tboxParser.T__5)
                    self.state = 49 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 48
                        self.replacement_pair()
                        self.state = 51 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==38):
                            break



                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2952790016) != 0):
                    self.state = 55
                    self.operations()
                    self.state = 60
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [7]:
                localctx = parmenides_tboxParser.InventionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(parmenides_tboxParser.T__6)
                self.state = 62
                self.match(parmenides_tboxParser.T__7)
                self.state = 63
                self.formula()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 64
                    self.match(parmenides_tboxParser.T__2)
                    self.state = 70
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 65
                            self.sentence_match()
                            self.state = 66
                            self.match(parmenides_tboxParser.T__3) 
                        self.state = 72
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                    self.state = 73
                    self.sentence_match()


                self.state = 76
                self.match(parmenides_tboxParser.T__8)
                self.state = 77
                self.formula()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 78
                    self.match(parmenides_tboxParser.T__4)
                    self.state = 79
                    self.ontology_query()


                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 82
                    self.match(parmenides_tboxParser.T__5)
                    self.state = 84 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 83
                        self.replacement_pair()
                        self.state = 86 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==38):
                            break



                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2952790016) != 0):
                    self.state = 90
                    self.operations()
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return parmenides_tboxParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FparenContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFparen" ):
                listener.enterFparen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFparen" ):
                listener.exitFparen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFparen" ):
                return visitor.visitFparen(self)
            else:
                return visitor.visitChildren(self)


    class Unary_predicateContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.rel = None # Opt_stringContext
            self.arg = None # FormulaContext
            self.score = None # Token
            self.copyFrom(ctx)

        def opt_string(self):
            return self.getTypedRuleContext(parmenides_tboxParser.Opt_stringContext,0)

        def formula(self):
            return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,0)

        def NUMBER(self):
            return self.getToken(parmenides_tboxParser.NUMBER, 0)
        def key_values(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Key_valuesContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Key_valuesContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_predicate" ):
                listener.enterUnary_predicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_predicate" ):
                listener.exitUnary_predicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnary_predicate" ):
                return visitor.visitUnary_predicate(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class Rw_variableContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(parmenides_tboxParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRw_variable" ):
                listener.enterRw_variable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRw_variable" ):
                listener.exitRw_variable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRw_variable" ):
                return visitor.visitRw_variable(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.FormulaContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.FormulaContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.name = None # Opt_stringContext
            self.type_ = None # Opt_stringContext
            self.specification = None # Opt_stringContext
            self.cop = None # FormulaContext
            self.copyFrom(ctx)

        def opt_string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Opt_stringContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Opt_stringContext,i)

        def formula(self):
            return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class Binary_predicateContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a parmenides_tboxParser.FormulaContext
            super().__init__(parser)
            self.rel = None # Opt_stringContext
            self.src = None # FormulaContext
            self.dst = None # FormulaContext
            self.score = None # Token
            self.copyFrom(ctx)

        def opt_string(self):
            return self.getTypedRuleContext(parmenides_tboxParser.Opt_stringContext,0)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.FormulaContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.FormulaContext,i)

        def NUMBER(self):
            return self.getToken(parmenides_tboxParser.NUMBER, 0)
        def key_values(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Key_valuesContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Key_valuesContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_predicate" ):
                listener.enterBinary_predicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_predicate" ):
                listener.exitBinary_predicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinary_predicate" ):
                return visitor.visitBinary_predicate(self)
            else:
                return visitor.visitChildren(self)



    def formula(self):

        localctx = parmenides_tboxParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_formula)
        self._la = 0 # Token type
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                localctx = parmenides_tboxParser.FparenContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(parmenides_tboxParser.T__9)
                self.state = 99
                self.formula()
                self.state = 100
                self.match(parmenides_tboxParser.T__10)
                pass

            elif la_ == 2:
                localctx = parmenides_tboxParser.Rw_variableContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(parmenides_tboxParser.STRING)
                self.state = 103
                self.match(parmenides_tboxParser.T__11)
                pass

            elif la_ == 3:
                localctx = parmenides_tboxParser.VariableContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                localctx.name = self.opt_string()
                self.state = 105
                localctx.type_ = self.opt_string()
                self.state = 106
                localctx.specification = self.opt_string()
                self.state = 108
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 107
                    localctx.cop = self.formula()


                pass

            elif la_ == 4:
                localctx = parmenides_tboxParser.Unary_predicateContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 110
                localctx.rel = self.opt_string()
                self.state = 111
                self.match(parmenides_tboxParser.T__9)
                self.state = 112
                localctx.arg = self.formula()
                self.state = 113
                self.match(parmenides_tboxParser.T__10)
                self.state = 114
                localctx.score = self.match(parmenides_tboxParser.NUMBER)
                self.state = 115
                self.match(parmenides_tboxParser.T__12)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==38:
                    self.state = 116
                    self.key_values()
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 122
                self.match(parmenides_tboxParser.T__13)
                pass

            elif la_ == 5:
                localctx = parmenides_tboxParser.Binary_predicateContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 124
                localctx.rel = self.opt_string()
                self.state = 125
                self.match(parmenides_tboxParser.T__9)
                self.state = 126
                localctx.src = self.formula()
                self.state = 127
                self.match(parmenides_tboxParser.T__14)
                self.state = 128
                localctx.dst = self.formula()
                self.state = 129
                self.match(parmenides_tboxParser.T__10)
                self.state = 130
                localctx.score = self.match(parmenides_tboxParser.NUMBER)
                self.state = 131
                self.match(parmenides_tboxParser.T__12)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==38:
                    self.state = 132
                    self.key_values()
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 138
                self.match(parmenides_tboxParser.T__13)
                pass

            elif la_ == 6:
                localctx = parmenides_tboxParser.AndContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.match(parmenides_tboxParser.T__15)
                self.state = 141
                self.formula()
                self.state = 143 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 142
                        self.formula()

                    else:
                        raise NoViableAltException(self)
                    self.state = 145 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

                pass

            elif la_ == 7:
                localctx = parmenides_tboxParser.OrContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 147
                self.match(parmenides_tboxParser.T__16)
                self.state = 148
                self.formula()
                self.state = 150 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 149
                        self.formula()

                    else:
                        raise NoViableAltException(self)
                    self.state = 152 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                pass

            elif la_ == 8:
                localctx = parmenides_tboxParser.NotContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 154
                self.match(parmenides_tboxParser.T__17)
                self.state = 155
                self.formula()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentence_matchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.relname = None # Token
            self.n = None # Token
            self.as_name = None # Token
            self.parents = None # Token

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(parmenides_tboxParser.STRING)
            else:
                return self.getToken(parmenides_tboxParser.STRING, i)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(parmenides_tboxParser.INTEGER)
            else:
                return self.getToken(parmenides_tboxParser.INTEGER, i)

        def field_match(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(parmenides_tboxParser.Field_matchContext)
            else:
                return self.getTypedRuleContext(parmenides_tboxParser.Field_matchContext,i)


        def getRuleIndex(self):
            return parmenides_tboxParser.RULE_sentence_match

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentence_match" ):
                listener.enterSentence_match(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentence_match" ):
                listener.exitSentence_match(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentence_match" ):
                return visitor.visitSentence_match(self)
            else:
                return visitor.visitChildren(self)




    def sentence_match(self):

        localctx = parmenides_tboxParser.Sentence_matchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sentence_match)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            localctx.relname = self.match(parmenides_tboxParser.STRING)
            self.state = 159
            localctx.n = self.match(parmenides_tboxParser.INTEGER)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 160
                self.match(parmenides_tboxParser.T__18)
                self.state = 161
                self.match(parmenides_tboxParser.T__19)
                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 162
                        self.field_match()
                        self.state = 163
                        self.match(parmenides_tboxParser.T__3) 
                    self.state = 169
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

                self.state = 170
                self.field_match()
                self.state = 171
                self.match(parmenides_tboxParser.T__20)


            self.state = 175
            self.match(parmenides_tboxParser.T__8)
            self.state = 176
            localctx.as_name = self.match(parmenides_tboxParser.STRING)
            self.state = 177
            self.match(parmenides_tboxParser.T__21)
            self.state = 178
            localctx.parents = self.match(parmenides_tboxParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_matchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None # Token
            self.attr = None # Token
            self.withval = None # Token
            self.asname = None # Token

        def INTEGER(self):
            return self.getToken(parmenides_tboxParser.INTEGER, 0)

        def data_match_path(self):
            return self.getTypedRuleContext(parmenides_tboxParser.Data_match_pathContext,0)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(parmenides_tboxParser.STRING)
            else:
                return self.getToken(parmenides_tboxParser.STRING, i)

        def getRuleIndex(self):
            return parmenides_tboxParser.RULE_field_match

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_match" ):
                listener.enterField_match(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_match" ):
                listener.exitField_match(self)
